Fix IE11 alignment bug on Image Text block

--- a/assets/scss/blocks/_b-image-text.scss
+++ b/assets/scss/blocks/_b-image-text.scss
@@ -47,6 +47,13 @@ $textMargin : true; // textarea top/bottom margin
             max-width: $container-max-width/2;
             width: $container-width/2;
             margin: initial;
+
+            .b-image-text--left & {
+                margin-right: 0px;
+            }
+            .b-image-text--right & {
+                margin-left: 0px;
+            }
         }
     }
 
